--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     -   id: check-added-large-files
     -   id: check-merge-conflict
 
--   repo: https://github.com/pre-commit/mirrors-black
-    rev: stable
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.9
     hooks:
-      - id: black
+    -   id: mypy
