--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,6 @@ repos:
     -   id: check-merge-conflict
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.9
+    rev: 'v1.8.0'
     hooks:
     -   id: mypy
